package com.coco.modules.project.domain;

public enum ProjectRole {
    OWNER, MANAGER, MEMBER, VIEWER
}