CREATE SEQUENCE IF NOT EXISTS cocouser_id_seq START WITH 1 INCREMENT BY 1;

CREATE SEQUENCE IF NOT EXISTS project_id_seq START WITH 1 INCREMENT BY 1;

CREATE SEQUENCE IF NOT EXISTS role_id_seq START WITH 1 INCREMENT BY 1;

CREATE SEQUENCE IF NOT EXISTS tasks_id_seq START WITH 1 INCREMENT BY 1;

CREATE TABLE cocouser
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    login      VARCHAR(255)                            NOT NULL,
    password   VARCHAR(255)                            NOT NULL,
    first_name VARCHAR(255),
    last_name  VARCHAR(255),
    email      VARCHAR(255)                            NOT NULL,
    image_url  TEXT,
    created_at TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW() NOT NULL,
    updated_at TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW() NOT NULL,
    CONSTRAINT cocouser_pkey PRIMARY KEY (id)
);

CREATE TABLE cocouser_project_role
(
    user_id    BIGINT NOT NULL,
    project_id BIGINT NOT NULL,
    role_id    BIGINT NOT NULL,
    CONSTRAINT cocouser_project_role_pkey PRIMARY KEY (user_id, project_id)
);

CREATE TABLE project
(
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name        VARCHAR(255)                            NOT NULL,
    description TEXT,
    logo_url    TEXT,
    status      VARCHAR(50) DEFAULT 'ACTIVE'            NOT NULL,
    created_at  TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW()    NOT NULL,
    updated_at  TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW()    NOT NULL,
    CONSTRAINT project_pkey PRIMARY KEY (id)
);

CREATE TABLE role
(
    id        BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    role_name VARCHAR(255)                            NOT NULL,
    CONSTRAINT role_pkey PRIMARY KEY (id)
);

CREATE TABLE task_status
(
    status       VARCHAR(50)            NOT NULL,
    display_name VARCHAR(100)           NOT NULL,
    color_hex    CHAR(7)                NOT NULL,
    sort_order   SMALLINT DEFAULT 0     NOT NULL,
    is_terminal  BOOLEAN  DEFAULT FALSE NOT NULL,
    CONSTRAINT task_status_pkey PRIMARY KEY (status)
);

CREATE TABLE tasks
(
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    project_id  BIGINT                                  NOT NULL,
    title       VARCHAR(255)                            NOT NULL,
    description TEXT,
    status      VARCHAR(50)                             NOT NULL,
    assigned_to BIGINT,
    due_date    date,
    created_at  TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW() NOT NULL,
    updated_at  TIMESTAMP WITHOUT TIME ZONE DEFAULT NOW() NOT NULL,
    CONSTRAINT tasks_pkey PRIMARY KEY (id)
);

ALTER TABLE cocouser
    ADD CONSTRAINT cocouser_email_key UNIQUE (email);

ALTER TABLE cocouser
    ADD CONSTRAINT cocouser_login_key UNIQUE (login);

ALTER TABLE project
    ADD CONSTRAINT project_name_key UNIQUE (name);

ALTER TABLE role
    ADD CONSTRAINT role_role_name_key UNIQUE (role_name);

CREATE INDEX idx_task_status_sort_order ON task_status (sort_order);

ALTER TABLE tasks
    ADD CONSTRAINT fk_tasks_assignee FOREIGN KEY (assigned_to) REFERENCES cocouser (id) ON DELETE SET NULL;

CREATE INDEX idx_tasks_assigned_to ON tasks (assigned_to);

ALTER TABLE tasks
    ADD CONSTRAINT fk_tasks_project FOREIGN KEY (project_id) REFERENCES project (id) ON DELETE CASCADE;

CREATE INDEX idx_tasks_project_id ON tasks (project_id);

ALTER TABLE tasks
    ADD CONSTRAINT fk_tasks_status FOREIGN KEY (status) REFERENCES task_status (status) ON DELETE RESTRICT;

CREATE INDEX idx_tasks_status ON tasks (status);

ALTER TABLE cocouser_project_role
    ADD CONSTRAINT fk_upr_project FOREIGN KEY (project_id) REFERENCES project (id) ON DELETE CASCADE;

CREATE INDEX idx_upr_project_id ON cocouser_project_role (project_id);

ALTER TABLE cocouser_project_role
    ADD CONSTRAINT fk_upr_role FOREIGN KEY (role_id) REFERENCES role (id) ON DELETE CASCADE;

CREATE INDEX idx_upr_role_id ON cocouser_project_role (role_id);

ALTER TABLE cocouser_project_role
    ADD CONSTRAINT fk_upr_user FOREIGN KEY (user_id) REFERENCES cocouser (id) ON DELETE CASCADE;

CREATE INDEX idx_upr_user_id ON cocouser_project_role (user_id);