@startuml database-schema
hide circle
skinparam linetype ortho
skinparam shadowing false

title COCO - Database Schema (Flyway V1 + V2 + V3 dev-seed)

entity "cocouser" as cocouser {
  *id : BIGINT <<PK>>
  --
  login : VARCHAR(255) <<UNIQUE>>
  password : VARCHAR(255)
  first_name : VARCHAR(255)
  last_name : VARCHAR(255)
  email : VARCHAR(255) <<UNIQUE>>
  image_url : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "project" as project {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR(255) <<UNIQUE>>
  description : TEXT
  logo_url : TEXT
  status : VARCHAR(50)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  archived_at : TIMESTAMPTZ
}

entity "project_role" as project_role {
  *id : BIGINT <<PK>>
  --
  role_name : VARCHAR(255) <<UNIQUE>>
}

entity "cocouser_project_role" as upr {
  *user_id : BIGINT <<PK, FK>>
  *project_id : BIGINT <<PK, FK>>
  --
  role_id : BIGINT <<FK>>
}

entity "task_status" as task_status {
  *status : VARCHAR(50) <<PK>>
  --
  display_name : VARCHAR(100)
  color_hex : CHAR(7)
  sort_order : SMALLINT
  is_terminal : BOOLEAN
}

entity "tasks" as tasks {
  *id : BIGINT <<PK>>
  --
  project_id : BIGINT <<FK>>
  title : VARCHAR(255)
  description : TEXT
  status : VARCHAR(50) <<FK>>
  assigned_to : BIGINT <<FK, NULL>>
  due_date : DATE
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

project ||--o{ tasks : project_id
task_status ||--o{ tasks : status
cocouser ||--o{ tasks : assigned_to (SET NULL)

cocouser ||--o{ upr : user_id
project ||--o{ upr : project_id
project_role ||--o{ upr : role_id

note right of upr
  PK compuesta:
  (user_id, project_id)
end note

note bottom of project
  V2 agrega:
  archived_at
  idx_projects_status_archived_at
end note

@enduml
